%% Entity Architecture Diagram
%% Maps to: FR-13, FR-14, FR-23, FR-24, FR-25
%% Storage: PostgreSQL (entities), MongoDB (models)
%% Note: Token blacklist is Redis-only (see 04-redis-blacklist.mmd)
%% Constraint: Single session per user — one active refresh token at a time

erDiagram
    %% PostgreSQL Entities
    USERS {
        UUID id PK
        %% not null
        VARCHAR username UK
        %% not null
        VARCHAR email UK
        VARCHAR password
        BOOLEAN blocked
        BOOLEAN is_deleted
        BOOLEAN is_verified
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    AUTH_TOKENS {
        UUID user_id PK
        %% user_id IS the PK — one row per user (single active session)
        VARCHAR token_hash
        %% bcrypt hash of refresh token
        TIMESTAMP expires_at
        TIMESTAMP updated_at
    }

    PUBLIC_KEY_REGISTRY {
        VARCHAR kid PK
        %% Key ID for JWT header
        TEXT public_key
        %% RSA public key PEM
        VARCHAR alg
        %% 'RSA'
        VARCHAR use
        %% 'sig' or 'enc'
        TIMESTAMP created_at
        TIMESTAMP expires_at
    }

    %% MongoDB Documents
    USER_DEMOGRAPHICS {
        UUID id PK
        UUID user_id FK
        VARCHAR last_ip
        VARCHAR country
        VARCHAR city
        TIMESTAMP last_login
    }

    USERS ||--o| AUTH_TOKENS : "has one, on delete cascade"
    USERS ||--o| USER_DEMOGRAPHICS : "has one"
    USERS ||--o{ PUBLIC_KEY_REGISTRY : "registers signing keys"
